# SoilMonitorRev2

./: .gitignore  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  common_types.h  idf_component.yml  main.c  nvs_config.c  nvs_config.h  time_sync_manager.c  time_sync_manager.h  wifi_credentials.h.example  wifi_manager.c  wifi_manager.h
main/components/actuators/: led_control.c  led_control.h  switch_input.c  switch_input.h  ws2812_control.c  ws2812_control.h
main/components/ble/: ble_manager.c  ble_manager.h
main/components/plant_logic/: data_buffer.c  data_buffer.h  plant_manager.c  plant_manager.h
main/components/sensors/: ds18b20_sensor.c  ds18b20_sensor.h  fdc1004_sensor.c  fdc1004_sensor.h  moisture_sensor.c  sht40_sensor.c  sht40_sensor.h  tc74_sensor.c  tc74_sensor.h  tmp102_sensor.c  tmp102_sensor.h
test/: README_BLE_TEST.md  ble_read_test.py
tests/: README.md  ble_test.py  requirements.txt  test_led_control.py  test_plant_profile.py  test_wifi_config.py  wifi_setup_interactive.py
